Bugged signal drawing, lots of debug logs and comments, do not use